# homework_DRF

./: .env_example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
config/: __init__.py  celery.py  settings.py  urls.py
fixtures/: auth_data.json  data.json  users_data.json
online_learning/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
online_learning/migrations/: 0001_initial.py  0002_lesson_url.py  0003_subscription.py
users/: models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: create_my_users.py  create_payments.py  csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_user_options_payment_course_payment_lesson.py  0004_payment_payment_url.py  0005_remove_payment_payment_url_payment_payment_link_and_more.py  0006_alter_user_last_login.py  0007_alter_user_last_login.py
